<resources>
    <string name="app_name">Movie&amp;Series</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="realese_date">Realese Date</string>
    <string name="rate">4.5</string>

    <string name="rate_title">Rate</string>
    <string name="realese">Realese Date</string>
    <string name="first_air_date">First Air Date</string>
    <string name="favorite">Favorite</string>

    <string name="emptymovie">Theres Is No Movie</string>
    <string name="emptyseries">Theres Is No Series</string>
</resources>
