<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:maxLines="1"
            android:text="@string/title"
            android:textColor="@color/pink"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/poster"
            app:layout_constraintTop_toTopOf="@id/poster"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:id="@+id/date_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:maxLines="4"
            android:text="@string/realese_date"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/title_movie" />

        <TextView
            android:id="@+id/rate_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:drawableStart="@drawable/ic_stars"
            android:drawableLeft="@drawable/ic_stars"
            android:gravity="center_vertical"
            android:maxLines="4"
            android:text="@string/rate"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/date_movie" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="2"
            android:text="@string/overview"
            app:layout_constraintStart_toStartOf="@id/rate_movie"
            app:layout_constraintTop_toBottomOf="@id/rate_movie"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.65" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>